--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GoGames</title>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <a class="header__logo" href="#">
+                    <img class="header__logo-img" src="images/dist/sprite.svg#header-logo" alt="Heolas.lt company logo">
+                </a>
+    
+                <nav class="header__nav">
+                    <ul class="header__nav-list">
+                        <li class="header__nav-list-item">
+                            <a class="header__nav-list-item-link" href="#">Home</a>
+                        </li>
+                        <li class="header__nav-list-item">
+                            <a class="header__nav-list-item-link" href="#">About Us</a>
+                        </li>
+                        <li class="header__nav-list-item">
+                            <a class="header__nav-list-item-link" href="#">Prices</a>
+                        </li>
+                        <li class="header__nav-list-item">
+                            <a class="header__nav-list-item-link" href="#">Rules</a>
+                        </li>
+                        <li class="header__nav-list-item">
+                            <a class="get-started-btn get-started-btn--header" href="#">Get Started Now</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <main class="main">
+        <div class="container">
+            <h1 class="visually-hidden">Healas.lt - console gaming hardware for purchase and for rent</h1>
+        </div>
+    </main>
 
     <script src="js/main.min.js"></script>
 </body>
