added section pricing

--- a/app/index.html
+++ b/app/index.html
@@ -185,6 +185,105 @@
                 </div>
             </div>
         </section>
+
+        <section class="pricing">
+            <div class="container">
+                <h2 class="title pricing__title">
+                    <span class="subtitle">Our Pricing</span>
+                    Choose Your Plan
+                </h2>
+
+                <ul class="pricing__list">
+                    <li class="pricing__list-item">
+                        <article class="pricing-plan">
+                            <h3 class="pricing-plan__title">
+                                Basic
+                                <span class="pricing-plan__title-price-wrapper">
+                                    <b class="pricing-plan__title-price"><span class="pricing-plan__title-price-currency">$</span>50.00</b>
+                                    <small class="pricing-plan__title-price-small">/ Per Hour</small>
+                                </span>
+                            </h3>
+                            <ul class="pricing-plan__list">
+                                <li class="pricing-plan__list-item">
+                                    10 users included
+                                </li>
+                                <li class="pricing-plan__list-item">
+                                    2 GB of storage
+                                </li>
+                                <li class="pricing-plan__list-item">
+                                    Email support
+                                </li>
+                                <li class="pricing-plan__list-item">
+                                    Help center access
+                                </li>
+                                <li class="pricing-plan__list-item">
+                                    10 users included
+                                </li>
+                            </ul>
+                            <a class="get-started-btn pricing-plan__link" href="#">Select This Plan</a>
+                        </article>
+                    </li>
+                    <li class="pricing__list-item">
+                        <article class="pricing-plan">
+                            <h3 class="pricing-plan__title">
+                                Standard
+                                <span class="pricing-plan__title-price-wrapper">
+                                    <b class="pricing-plan__title-price"><span class="pricing-plan__title-price-currency">$</span>95.00</b>
+                                    <small class="pricing-plan__title-price-small">/ Per Hour</small>
+                                </span>
+                            </h3>
+                            <ul class="pricing-plan__list">
+                                <li class="pricing-plan__list-item">
+                                    10 users included
+                                </li>
+                                <li class="pricing-plan__list-item">
+                                    2 GB of storage
+                                </li>
+                                <li class="pricing-plan__list-item">
+                                    Email support
+                                </li>
+                                <li class="pricing-plan__list-item">
+                                    Help center access
+                                </li>
+                                <li class="pricing-plan__list-item">
+                                    10 users included
+                                </li>
+                            </ul>
+                            <a class="get-started-btn pricing-plan__link" href="#">Select This Plan</a>
+                        </article>
+                    </li>
+                    <li class="pricing__list-item">
+                        <article class="pricing-plan">
+                            <h3 class="pricing-plan__title">
+                                Premium
+                                <span class="pricing-plan__title-price-wrapper">
+                                    <b class="pricing-plan__title-price"><span class="pricing-plan__title-price-currency">$</span>120.00</b>
+                                    <small class="pricing-plan__title-price-small">/ Per Hour</small>
+                                </span>
+                            </h3>
+                            <ul class="pricing-plan__list">
+                                <li class="pricing-plan__list-item">
+                                    10 users included
+                                </li>
+                                <li class="pricing-plan__list-item">
+                                    2 GB of storage
+                                </li>
+                                <li class="pricing-plan__list-item">
+                                    Email support
+                                </li>
+                                <li class="pricing-plan__list-item">
+                                    Help center access
+                                </li>
+                                <li class="pricing-plan__list-item">
+                                    10 users included
+                                </li>
+                            </ul>
+                            <a class="get-started-btn pricing-plan__link" href="#">Select This Plan</a>
+                        </article>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <script src="js/main.min.js"></script>
