--- a/app/index.html
+++ b/app/index.html
@@ -171,7 +171,9 @@
                             Series
                         </h2>
                         <p class="text about-consoles__text">
-                            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters as opposed.
+                            It is a long established fact that a reader will be distracted by the readable content of a
+                            page when looking at its layout. The point of using Lorem Ipsum is that it has a
+                            more-or-less normal distribution of letters as opposed.
                         </p>
                         <a class="get-started-btn" href="#">Get Started Now</a>
                     </div>
@@ -199,7 +201,8 @@
                             <h3 class="pricing-plan__title">
                                 Basic
                                 <span class="pricing-plan__title-price-wrapper">
-                                    <b class="pricing-plan__title-price"><span class="pricing-plan__title-price-currency">$</span>50.00</b>
+                                    <b class="pricing-plan__title-price"><span
+                                            class="pricing-plan__title-price-currency">$</span>50.00</b>
                                     <small class="pricing-plan__title-price-small">/ Per Hour</small>
                                 </span>
                             </h3>
@@ -228,7 +231,8 @@
                             <h3 class="pricing-plan__title">
                                 Standard
                                 <span class="pricing-plan__title-price-wrapper">
-                                    <b class="pricing-plan__title-price"><span class="pricing-plan__title-price-currency">$</span>95.00</b>
+                                    <b class="pricing-plan__title-price"><span
+                                            class="pricing-plan__title-price-currency">$</span>95.00</b>
                                     <small class="pricing-plan__title-price-small">/ Per Hour</small>
                                 </span>
                             </h3>
@@ -257,7 +261,8 @@
                             <h3 class="pricing-plan__title">
                                 Premium
                                 <span class="pricing-plan__title-price-wrapper">
-                                    <b class="pricing-plan__title-price"><span class="pricing-plan__title-price-currency">$</span>120.00</b>
+                                    <b class="pricing-plan__title-price"><span
+                                            class="pricing-plan__title-price-currency">$</span>120.00</b>
                                     <small class="pricing-plan__title-price-small">/ Per Hour</small>
                                 </span>
                             </h3>
@@ -285,6 +290,45 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <a class="footer__logo" href="#">go to the top of the page</a>
+                <small class="footer__copy">
+                    Copyright © 2022 HEALAS.LT. All Rights Reserved.
+                </small>
+                <address class="footer__socials">
+                    <ul class="footer__socials-list">
+                        <li class="footer__socials-list-item">
+                            <a class="footer__socials-list-item-link" href="#">
+                                facebook link
+                                <svg class="footer__socials-list-item-link-svg footer__socials-list-item-link-facebook">
+                                    <use xlink:href="images/dist/sprite-symbol.svg#facebook-logo"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer__socials-list-item">
+                            <a class="footer__socials-list-item-link" href="#">
+                                twitter link
+                                <svg class="footer__socials-list-item-link-svg footer__socials-list-item-link-twitter">
+                                    <use xlink:href="images/dist/sprite-symbol.svg#twitter-logo"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer__socials-list-item">
+                            <a class="footer__socials-list-item-link" href="#">
+                                instagram link
+                                <svg class="footer__socials-list-item-link-svg footer__socials-list-item-link-instagram">
+                                    <use xlink:href="images/dist/sprite-symbol.svg#instagram-logo"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
+        </div>
+    </footer>
 
     <script src="js/main.min.js"></script>
 </body>
