--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,16 @@
                     </picture>
                 </a>
 
+                <button class="burger-menu">
+                    <span class="burger-menu__text visually-hidden">Navigation bar</span>
+                    <svg class="burger-menu__svg" width="55" height="15" viewBox="0 0 55 15" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M0.836 14V0.499999H0.854L7.802 10.346L6.974 10.166L13.886 0.499999H13.922V14H12.014V4.838L12.14 5.828L7.316 12.65H7.28L2.366 5.828L2.69 4.928V14H0.836ZM17.588 0.932H26.174V2.786H19.514V6.512H25.436V8.366H19.514V12.146H26.426V14H17.588V0.932ZM40.7769 14.45L30.7149 4.46L31.2729 4.64L31.3269 14H29.3829V0.518H29.4729L39.4089 10.526L38.9589 10.4L38.9229 0.932H40.8309V14.45H40.7769ZM46.2456 9.338C46.2456 9.89 46.3836 10.388 46.6596 10.832C46.9356 11.276 47.3016 11.63 47.7576 11.894C48.2136 12.158 48.7236 12.29 49.2876 12.29C49.8876 12.29 50.4216 12.158 50.8896 11.894C51.3576 11.63 51.7236 11.276 51.9876 10.832C52.2636 10.388 52.4016 9.89 52.4016 9.338V0.932H54.2916V9.392C54.2916 10.34 54.0696 11.174 53.6256 11.894C53.1816 12.602 52.5816 13.154 51.8256 13.55C51.0696 13.946 50.2236 14.144 49.2876 14.144C48.3756 14.144 47.5416 13.946 46.7856 13.55C46.0296 13.154 45.4296 12.602 44.9856 11.894C44.5536 11.174 44.3376 10.34 44.3376 9.392V0.932H46.2456V9.338Z"
+                            fill="#446381" />
+                    </svg>
+                </button>
+
                 <nav class="header__nav">
                     <ul class="header__nav-list">
                         <li class="header__nav-list-item">
@@ -161,7 +171,7 @@
             </div>
         </section>
 
-        <section class="about-consoles">
+        <!-- <section class="about-consoles">
             <div class="container">
                 <div class="about-consoles__inner">
                     <div class="about-consoles__left">
@@ -288,10 +298,10 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
     </main>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container">
             <div class="footer__inner">
                 <a class="footer__logo" href="#">go to the top of the page</a>
@@ -328,7 +338,7 @@
                 </address>
             </div>
         </div>
-    </footer>
+    </footer> -->
 
     <script src="js/main.min.js"></script>
 </body>
