adapted section about-consoles

--- a/app/index.html
+++ b/app/index.html
@@ -171,7 +171,7 @@
             </div>
         </section>
 
-        <!-- <section class="about-consoles">
+        <section class="about-consoles">
             <div class="container">
                 <div class="about-consoles__inner">
                     <div class="about-consoles__left">
@@ -191,14 +191,16 @@
                     <div class="about-consoles__right">
                         <div class="about-consoles__right-img-bg"></div>
                         <div class="about-consoles__right-img"></div>
-                        <div class="about-consoles__right-img-screw-small"></div>
-                        <div class="about-consoles__right-img-screw-big"></div>
+                        <div class="about-consoles__right-img-screw">
+                            <div class="about-consoles__right-img-screw-small"></div>
+                            <div class="about-consoles__right-img-screw-big"></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="pricing">
+        <!-- <section class="pricing">
             <div class="container">
                 <h2 class="title pricing__title">
                     <span class="subtitle">Our Pricing</span>
