adapted section pricing and footer

--- a/app/index.html
+++ b/app/index.html
@@ -200,7 +200,7 @@
             </div>
         </section>
 
-        <!-- <section class="pricing">
+        <section class="pricing">
             <div class="container">
                 <h2 class="title pricing__title">
                     <span class="subtitle">Our Pricing</span>
@@ -215,7 +215,7 @@
                                 <span class="pricing-plan__title-price-wrapper">
                                     <b class="pricing-plan__title-price"><span
                                             class="pricing-plan__title-price-currency">$</span>50.00</b>
-                                    <small class="pricing-plan__title-price-small">/ Per Hour</small>
+                                    <small class="pricing-plan__title-price-small">/&nbsp;Per&nbsp;Hour</small>
                                 </span>
                             </h3>
                             <ul class="pricing-plan__list">
@@ -245,7 +245,7 @@
                                 <span class="pricing-plan__title-price-wrapper">
                                     <b class="pricing-plan__title-price"><span
                                             class="pricing-plan__title-price-currency">$</span>95.00</b>
-                                    <small class="pricing-plan__title-price-small">/ Per Hour</small>
+                                    <small class="pricing-plan__title-price-small">/&nbsp;Per&nbsp;Hour</small>
                                 </span>
                             </h3>
                             <ul class="pricing-plan__list">
@@ -275,7 +275,7 @@
                                 <span class="pricing-plan__title-price-wrapper">
                                     <b class="pricing-plan__title-price"><span
                                             class="pricing-plan__title-price-currency">$</span>120.00</b>
-                                    <small class="pricing-plan__title-price-small">/ Per Hour</small>
+                                    <small class="pricing-plan__title-price-small">/&nbsp;Per&nbsp;Hour</small>
                                 </span>
                             </h3>
                             <ul class="pricing-plan__list">
@@ -300,10 +300,10 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
     </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="footer__inner">
                 <a class="footer__logo" href="#">go to the top of the page</a>
@@ -340,7 +340,7 @@
                 </address>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
     <script src="js/main.min.js"></script>
 </body>
